--- a/index.html
+++ b/index.html
@@ -3,16 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chronological Timeline</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Timeline</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .timeline-container {
+            width: 100%;
+            overflow-x: auto;
+            position: relative;
+            white-space: nowrap;
+            border: 1px solid #ccc;
+            padding: 10px 0;
+        }
+        .event-marker {
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #007bff;
+            position: relative;
+            margin-right: 20px;
+        }
+        .event-label {
+            display: block;
+            text-align: center;
+            margin-top: 5px;
+            font-size: 14px;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <div class="timeline-wrapper">
-        <h1>Chronological Timeline</h1>
-        <div id="timeline" class="timeline">
-            <p>Loading events...</p>
+    <h1>Temporal Events Timeline</h1>
+    <div class="timeline-container">
+        <div class="event-marker">
+            <span class="event-label">Event 1</span>
+        </div>
+        <div class="event-marker">
+            <span class="event-label">Event 2</span>
+        </div>
+        <div class="event-marker">
+            <span class="event-label">Event 3</span>
+        </div>
+        <div class="event-marker">
+            <span class="event-label">Event 4</span>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
