Updated index.html to add script linking and timeline element container.

--- a/index.html
+++ b/index.html
@@ -4,52 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timeline</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .timeline-container {
-            width: 100%;
-            overflow-x: auto;
-            position: relative;
-            white-space: nowrap;
-            border: 1px solid #ccc;
-            padding: 10px 0;
-        }
-        .event-marker {
-            display: inline-block;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #007bff;
-            position: relative;
-            margin-right: 20px;
-        }
-        .event-label {
-            display: block;
-            text-align: center;
-            margin-top: 5px;
-            font-size: 14px;
-            color: #333;
-        }
-    </style>
+    <!-- Link your script here -->
+    <script src="path/to/your/script.js"></script>
 </head>
 <body>
-    <h1>Temporal Events Timeline</h1>
     <div class="timeline-container">
-        <div class="event-marker">
-            <span class="event-label">Event 1</span>
-        </div>
-        <div class="event-marker">
-            <span class="event-label">Event 2</span>
-        </div>
-        <div class="event-marker">
-            <span class="event-label">Event 3</span>
-        </div>
-        <div class="event-marker">
-            <span class="event-label">Event 4</span>
+        <div class="timeline-element-container">
+            <!-- Timeline elements will go here -->
         </div>
     </div>
 </body>
