--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeline</title>
-    <!-- Link your script here -->
-    <script src="path/to/your/script.js"></script>
+    <title>Chronological Timeline</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="timeline-container">
-        <div class="timeline-element-container">
-            <!-- Timeline elements will go here -->
+    <div class="timeline-wrapper">
+        <h1>Chronological Timeline</h1>
+        <div id="timeline" class="timeline">
+            <p>Loading events...</p>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
