--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>goopchat timeline</h1>
     <div class="timeline-wrapper">
-        <h1>Chronological Timeline</h1>
         <div id="timeline" class="timeline">
             <p>Loading events...</p>
         </div>
